<?xml version="1.0"?>
<package format="2">
  <name>ancubekit</name>
  <version>1.0.0</version>
  <description> ROS packages Ancube-Kit (metapackage)</description>
  <license>BSD</license>
  <author email="sweilz.w@gmail.com">Liews Wuttipat</author>
  <maintainer email="sweilz.w@gmail.com">Liews Wuttipat</maintainer>
  <url type="repository">https://github.com/SweiLz/Ancube-Kit</url> 
  <url type="bugtracker">https://github.com/SweiLz/Ancube-Kit/issues</url> 

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>ancubekit_teleop</exec_depend>
  <exec_depend>ancubekit_slam</exec_depend>
  <exec_depend>ancubekit_bringup</exec_depend>
  <exec_depend>ancubekit_description</exec_depend>
  <exec_depend>ancubekit_navigation</exec_depend>
  <export><metapackage/></export>
</package>
