<?xml version="1.0"?>
<package format="2">
  <name>ancubekit_description</name>
  <version>1.0.0</version>
  <description>ROS packages Ancube-Kit description</description>
  <license>BSD</license>
  <author email="sweilz.w@gmail.com">Liews Wuttipat</author>
  <maintainer email="sweilz.w@gmail.com">Liews Wuttipat</maintainer>
  <url type="repository">https://github.com/SweiLz/Ancube-Kit</url> 
  <url type="bugtracker">https://github.com/SweiLz/Ancube-Kit/issues</url> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
